180301 for ucla DYF

--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -247,6 +247,9 @@ General Assembly}, Honolulu, HI     \\
     \textsc{Jun. 2016}   &   \textbf{Invited talk}, @ Nanjing University, Nanjing \\
     \multicolumn{2}{c}{} \\
 
+    \textsc{Jun. 2016}   &   \textbf{Invited talk}, @ Purple Mountain Observatory, Nanjing \\
+    \multicolumn{2}{c}{} \\
+
     \textsc{Jun. 2016}   &   \textbf{Invited talk}, @ Tsinghua University, Beijing \\
     \multicolumn{2}{c}{} \\
 
