--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -71,7 +71,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Personal Information}
 \begin{tabular}{rl}
-    \textsc{Date and Place of Birth:}       & September 1$^{\rm st}$, 1988  |  Tianjin, China \\
+%    \textsc{Date and Place of Birth:}       & September 1$^{\rm st}$, 1988  |  Tianjin, China \\
     \textsc{Current Status:}  & Graduate Student at University of California, Los Angeles \\
     \textsc{E-mail, Cell and Skype Account:}  & \href{mailto:albertfxwang@gmail.com}{albertfxwang@gmail.com}  |  +1-805-574-0025  |  albertfxwang \\
     \textsc{Mailing Address:} & 3251 S. Sepulveda Blvd., Apt. 307, Los Angeles, CA 90034, USA \\
@@ -95,7 +95,7 @@
   &   \texttt{Advisor: Prof. Tommaso Treu}     \\
   \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
-  \textsc{Sept. 2013}--      &   Physics Department, UCSB    |   \textbf{M.A. in Physics (Jun. 2015)}   \\
+  \textsc{Sept. 2013}--      &   Physics Department, University of California, Santa Barbara    |   \textbf{M.A. in Physics (Jun. 2015)}   \\
   \textsc{Sept. 2015}
   &   \texttt{Advisor: Prof. Tommaso Treu}; \quad Cumulative Total (Grad) GPA: 3.96     \\
   \multicolumn{2}{c}{} \\
@@ -139,8 +139,8 @@
 %  &   \textbf{Scientific Product: paper to be submitted} \\
 %  \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
-  \textsc{Feb. 2012}--   &   \emph{Title: Constraints on Cosmic Neutrinos and Dark Energy Revisited}  \\
-  \textsc{Oct. 2012}     &   \small{Using various cosmological observations, i.e., CMB, weak lensing (WL), BAO, observational Hubble
+  \textsc{Jan. 2012}--   &   \emph{Title: Constraints on Cosmic Neutrinos and Dark Energy Revisited}  \\
+  \textsc{Dec. 2012}     &   \small{Using various cosmological observations, i.e., CMB, weak lensing (WL), BAO, observational Hubble
   parameter data (OHD), type Ia supernovae (SNIa), we impose constraints on the sum of neutrino masses ($\Sigma m_{\nu}$), the
   effective number of neutrino species ($N_{\rm eff}$) and dark energy equation of state ($w$). We find that a tight upper limit
   on $\Sigma m_{\nu}$ can be extracted if $N_{\rm eff}$ and $w$ are fixed, however it will be severely weakened if $N_{\rm eff}$ and
@@ -172,71 +172,79 @@
 %  \multicolumn{2}{c}{} \\
   %--------------------------------------------------------
   \textsc{Sept. 2008}--  &   \emph{Title: Investigation on the Emission from the Receding Jet of Gamma-Ray Bursts}   \\
-  \textsc{Sept. 2009}    &   \small{We studied the dynamical evolution of double-sided jets launched by 
+  \textsc{Jun. 2010}    &   \small{We studied the dynamical evolution of double-sided jets launched by 
   the central engine of GRBs and calculated the afterglow emission from both jet components. For the first time, we present a 
   detailed numerical study on the afterglow contributed from the jet component receding from the observer, with the effects of 
   synchrotron self-absorption and equal arrival time surface taken into account. It is found that the receding jet emission is 
   generally very weak and only manifests as a plateau in the late time radio afterglow light curves. However the emission from the 
   receding jet can be significantly enhanced and possibly detectable, if the circum-burst medium density is high.} \\
-  &   \textbf{Scientific Product: \hyperlink{09.wang.aa}{Wang et al. (2009)}} \\
+  &   \textbf{Scientific Product: \hyperlink{09.wang.aa}{Wang et al. (2009)}, \hyperlink{10.wang.scichina}{Wang et al. (2010)}} \\
   %========================================================
 \end{longtable}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\vspace{1em}
-\section{Publications and Activities}
+\section{Publications}
 \begin{longtable}{p{6in}}
 %\begin{longtable}{p{17cm}}
-\multicolumn{1}{c}{\textsc{Selected Papers in Refereed Academic Journals}}      \\
-\vspace{-0.3cm}
+\multicolumn{1}{c}{\textsc{1st/2nd Author Papers in Refereed Academic Journals}}      \\
+\vspace{-0.2cm}
 \begin{list}{\labelitemi}{\leftmargin=0.5em}
     \item[1]\hypertarget{09.wang.aa}{} \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. On the Afterglow from the Receding Jet of Gamma-Ray Bursts. 2009, \textit{Astron. Astrophys.}, 505, 1213 (\href{http://arxiv.org/abs/0903.3119}{arXiv:0903.3119})
-%    \item[2]\hypertarget{12.meng.apj}{} Meng, X.-L., Zhang, T.-J., Zhan, H., \& \textbf{Wang, X.} Morphology of Galaxy Clusters: A Cosmological Model-Independent Test of the Cosmic Distance-Duality Relation. 2012, \textit{Astrophys. J.}, 745, 98 (\href{http://arxiv.org/abs/1104.2833}{arXiv:1104.2833})
-    \item[2]\hypertarget{12.wang.jcap}{} \textbf{Wang, X.}, Meng, X.-L. et al. Observational Constraints on Cosmic Neutrinos and Dark Energy Revisited. 2012, \textit{J. Cosmol. Astropart. Phys.}, 11, 018 (\href{http://arxiv.org/abs/1210.2136}{arXiv:1210.2136})
-%    \item[4]\hypertarget{13.wang.raa}{} \textbf{Wang, X.}, Meng, X.-L., \& Huang, Y. F., Testing X-ray Measurements of Galaxy Cluster Gas
-%  Mass Fraction Using the Cosmic Distance-Duality Relation and Type Ia Supernovae. 2013, RAA, 13, 1013 (\href{http://arxiv.org/abs/1305.2077}{arXiv:1305.2077})
-%    \item[5]\hypertarget{14.schmidt.apjl}{} Schmidt, K. B., Treu, T., Brammer, G. B., Bradac, M., \textbf{Wang, X.} et al. Through
-%      the Looking GLASS: HST Spectroscopy of Faint Galaxies Lensed by the Frontier Fields Cluster MACSJ0717.5+3745. 2014,
-%      \textit{Astrophys. J. Letters}, 782L, 36, (\href{http://arxiv.org/abs/1401.0532}{arXiv:1401.0532})
-    \item[3]\hypertarget{15.jones.aj}{} Jones, T., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) II.
+    \item[2]\hypertarget{10.wang.scichina}{} \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. Constraint on the Counter-jet Emission in GRB Afterglows from GRB 980703. 2010, \textit{Sci. China-Phys. Mech. Astron.}, 53 (Suppl.1), 259
+    \item[3]\hypertarget{12.wang.jcap}{} \textbf{Wang, X.}, Meng, X.-L. et al. Observational Constraints on Cosmic Neutrinos and Dark Energy Revisited. 2012, \textit{J. Cosmol. Astropart. Phys.}, 11, 018 (\href{http://arxiv.org/abs/1210.2136}{arXiv:1210.2136})
+    \item[4]\hypertarget{13.wang.raa}{} \textbf{Wang, X.}, Meng, X.-L., \& Huang, Y. F., Testing X-ray Measurements of Galaxy Cluster Gas
+  Mass Fraction Using the Cosmic Distance-Duality Relation and Type Ia Supernovae. 2013, RAA, 13, 1013 (\href{http://arxiv.org/abs/1305.2077}{arXiv:1305.2077})
+    \item[5]\hypertarget{15.jones.aj}{} Jones, T., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) II.
         Gas-Phase Metallicity and Radial Gradients in an Interacting System At z$\sim$2. 2015, \textit{Astron. J.}, 149, 107
         (\href{http://arxiv.org/abs/1410.0967}{arXiv:1410.0967})
-    \item[4]\hypertarget{15.wang.apj}{} \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. 
+    \item[6]\hypertarget{15.wang.apj}{} \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. 
         Mass reconstruction of the lensing cluster Abell 2744 from frontier field imaging and GLASS spectroscopy. 2015, 
         \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405})
-    \item[5]\hypertarget{17.wang.apj}{} \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X.
+    \item[7]\hypertarget{17.wang.apj}{} \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X.
         Sub-kiloparsec resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 
         2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558}{arXiv:1610.07558})
 \end{list}  \\
 %\multicolumn{1}{c}{\textsc{Conference Contributions, Unrefereed}}    \\
 %\vspace{-0.4cm}
 %\begin{list}{\labelitemi}{\leftmargin=0.5em}
-%    \item[2]\hypertarget{10.wang.scichina}{} \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. Constraint on the Counter-jet Emission in GRB Afterglows from GRB 980703. 2010a, \textit{Sci. China-Phys. Mech. Astron.}, 53 (Suppl.1), 259
 %    \item[5]\hypertarget{5}{} \textbf{Wang, X.}, \& Huang, Y. F. On the Counter-jet Emission in GRB Afterglows. 2010b, \textit{AIP Conference Proceedings}, 1279, 460 (\href{http://arxiv.org/abs/1012.0521}{arXiv:1012.0521})
 %\end{list}   \\
+
+\multicolumn{1}{c}{\textsc{Contributing Author Papers in Refereed Academic Journals}}      \\
+\vspace{-0.2cm}
+\begin{list}{\labelitemi}{\leftmargin=0.5em}
+    \item[1]\hypertarget{12.meng.apj}{} Meng, X.-L., Zhang, T.-J., Zhan, H., \& \textbf{Wang, X.} Morphology of Galaxy Clusters: A Cosmological Model-Independent Test of the Cosmic Distance-Duality Relation. 2012, \textit{Astrophys. J.}, 745, 98 (\href{http://arxiv.org/abs/1104.2833}{arXiv:1104.2833})
+    \item[2]\hypertarget{14.schmidt.apjl}{} Schmidt, K. B., Treu, T., Brammer, G. B., Bradac, M., \textbf{Wang, X.} et al. Through the Looking GLASS: HST Spectroscopy of Faint Galaxies Lensed by the Frontier Fields Cluster MACSJ0717.5+3745. 2014, \textit{Astrophys. J. Letters}, 782L, 36 (\href{http://arxiv.org/abs/1401.0532}{arXiv:1401.0532})
+    \item[3]\hypertarget{}{} Treu, T., Schmidt, K. B., Brammer, G. B., Vulcani, B., \textbf{Wang, X.} et al. The Grism 
+    Lens-Amplified Survey from Space (GLASS). I. Survey Overview and First Data Release, 2015, \textit{Astrophys. J.}, 812, 114 
+    (\href{https://arxiv.org/abs/1509.00475}{arXiv:1509.00475})
+    \item[4]\hypertarget{}{} Morishita, T., Abramson, L. E., Treu, T., Schmidt, K. B., Vulcani, B., \textbf{Wang, X.} 
+    Characterizing Intracluster Light in the Hubble Frontier Fields. 2017, \textit{Astrophys. J.}, 846, 139 
+    (\href{https://arxiv.org/abs/1610.08503}{arXiv:1610.08503})
+    \item[5]\hypertarget{}{} Kelly, P. L., ..., \textbf{Wang, X.} et al. An individual star at redshift 1.5 extremely magnified by 
+    a galaxy-cluster lens. 2018, \textit{Nature Astronomy}, in press (\href{https://arxiv.org/abs/1706.10279}{arXiv:1706.10279})
+    \item[6]\hypertarget{}{} Morishita, T., Abramson, L. E., Treu, T., \textbf{Wang, X.}  Metal Deficiency in Two Massive Dead 
+    Galaxies at z$\sim$2, 2018, \textit{Astrophys. J. Letters}, 856L, 4 (\href{https://arxiv.org/abs/1803.01852}{arXiv:1803.01852})
+\end{list}
+
 \end{longtable}
 
-\vspace{-2em}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{-1.5em}
+\section{Academic Activities (selected)}
 
 \begin{longtable}{r|p{5.5in}}
 %\begin{longtable}{r|p{16.5cm}}
 
-    \multicolumn{2}{c}{\textsc{Selected Academic Activities}}  \\
-    \multicolumn{2}{c}{} \\
-
     \textsc{Apr. 2009}   &   \textbf{Contributed talk}, @ \href{http://www.ns-grb.com/index0.html}{Frontiers of Space Astrophysics: Neutron Stars \& Gamma Ray Bursts --- Recent Developments \& Future Directions}, Cairo \& Alexandria, Egypt     \\
     \multicolumn{2}{c}{} \\
-%\textsc{Apr. 2010}   &   \textbf{Presented a poster}, @ \href{http://www-tap.scphys.kyoto-u.ac.jp/GRB2010/}{Deciphering the Ancient Universe with Gamma-Ray Bursts}, Kyoto, Japan    \\
-%            &   \emph{Title: On the Counter-Jet Emission in GRB Afterglows}     \\
-%\multicolumn{2}{c}{} \\
 
     \textsc{Jun. 2010}   &   \textbf{Contributed talk}, @ \href{http://www.physics.hku.hk/~astro/2010Astro/Index.htm}{A mini-workshop on ``Gamma-ray Sky from Fermi: Neutron Stars and their Environment''}, University of Hong Kong, Hong Kong   \\
     \multicolumn{2}{c}{} \\
 
-%\textsc{Jul. 2011}   &   Member of LOC, @ \href{http://lss.bao.ac.cn/meeting/lens11/}{Summer School \& Workshop: Weak and Strong Gravitational Lensing}, NAOC, Beijing  \\
-%\multicolumn{2}{c}{} \\
-
-%    \textsc{Nov. 2012}   &   \textbf{Presented a talk}, @ \href{http://www.thca.tsinghua.edu.cn/en/index.php/Workshop_programme}{Tsinghua Transient Workshop 2012}, Tsinghua University, Beijing   \\
+%    \textsc{Nov. 2012}   &   \textbf{Presented a talk}, @ \href{http://www.phys.tsinghua.edu.cn/publish/phy/5287/2012/20121102084855753317440/20121102084855753317440_.html}{Tsinghua Transient Workshop 2012}, Tsinghua University, Beijing   \\
 %            &   \emph{Title: Observational constraints on cosmic neutrinos and dark energy revisited}    \\
 %    \multicolumn{2}{c}{} \\
 
@@ -250,8 +258,8 @@ General Assembly}, Honolulu, HI     \\
     \textsc{Jun. 2016}   &   \textbf{Invited talk}, @ Purple Mountain Observatory, Nanjing \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jun. 2016}   &   \textbf{Invited talk}, @ Tsinghua University, Beijing \\
-    \multicolumn{2}{c}{} \\
+%    \textsc{Jun. 2016}   &   \textbf{Invited talk}, @ Tsinghua University, Beijing \\
+%    \multicolumn{2}{c}{} \\
 
     \textsc{Jun. 2016}   &   \textbf{Invited talk}, @ National Astronomical Observatories of China, Beijing   \\
     \multicolumn{2}{c}{} \\
@@ -285,26 +293,20 @@ General Assembly}, Honolulu, HI     \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Feb. 2018}   &   \href{https://www.ipac.caltech.edu/event/358}{\textbf{Colloquium talk}}, @ IPAC, Caltech, Pasadena, CA \\
-    \multicolumn{2}{c}{} \\
+    \multicolumn{2}{c}{}
 
 \end{longtable}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\section{English Proficiency}
-%\begin{tabular}{rl}
-%~~~~~GRE General:        & 550 (69\%, Verbal) + 800 (94\%, Quantitative) + 4.0 (49\%, Analytical Writing)    \\
-%~~~~~GRE Physics:        & 940 (91\%)    \\
-%~~~~~TOEFL:      &   29 (Reading) + 30 (Listening) + 23 (Speaking) + 28 (Writing) = 110
-%\end{tabular}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{-1.2em}
 \section{Awards and Honors (selected)}
 \begin{tabular}{rp{5in}}
 ~~~~~~\textsc{Apr. 2015} & AAS International Travel Grant (\$1k)    \\
 ~~~~~~\textsc{Jun. 2014} & 1$^{\rm st}$ Prize for Excellent M.Sc. Thesis amongst all Universities and Colleges in Jiangsu Province   \\
 ~~~~~~\textsc{Sept. 2013} & Broida Fellowship, UCSB (\$3k)  \\
 ~~~~~~\textsc{Dec. 2012} & National Scholarship for Graduates ($\sim$\$4k)  \\
-& {\it\small ~~~This is the highest honorific scholarship within China conferred annually upon excellent graduate students.}\\
+& {\it\small ~~~highest honorific scholarship in China conferred annually on excellent graduate students}\\
 %~~~~~~\textsc{Jan. 2012} & Excellent Graduate Leader in School of Astronomy and Space Sciences, Nanjing University  \\
 %~~~~~~\textsc{Nov. 2010} & Scholarship for Excellent Graduate Students in Nanjing University \\
 ~~~~~~\textsc{Aug. 2010} & 1$^{\rm st}$ Prize for Excellent B.Sc. Thesis amongst all Universities and Colleges in Jiangsu Province   \\
@@ -312,17 +314,25 @@ General Assembly}, Honolulu, HI     \\
 %\textsc{2007--2008} & Special Scholarship for Innovation, People's Scholarship, \textit{Der} Scholarship, etc.   \\
 \end{tabular}
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{1em}
+\vspace{0.8em}
 \section{Computer Skills}
 ~~~~Python, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathmatica
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{1em}
+\vspace{0.8em}
 \section{Working Experience and Outreach Activities}
 \begin{tabular}{rp{5.5in}}
 %\begin{tabular}{rp{16cm}}
+
+\textsc{2010--2012}  & President of Graduate Student Union in School of Astronomy and Space Sciences, NJU \\
+\multicolumn{2}{c}{} \\
+
+\textsc{\small Sept.--Dec. 2010}  & Teaching assistant of Theoretical Astrophysics (upper division undergraduate course), NJU \\
+\multicolumn{2}{c}{} \\
+
 \textsc{Dec. 2010}--  & Organizer of Graduate Journal Club in School of Astronomy 
 and Space Sciences, NJU \\
 \textsc{Dec. 2011}    & \small{In total, I arranged 17 meetings, and invited 
@@ -330,20 +340,16 @@ and Space Sciences, NJU \\
 %most of which are graduate students. The majority of the speakers come from our school, while we do have speakers from many other institutes, e.g., Purple Mountain Observatory, University of Science and Technology of China, University of Sydney. 
 The topics are related to the major field of interest of the speakers, who will also share with participants some academic experience in doing scientific research. This activity is financially supported by our school.}  \\
 \multicolumn{2}{c}{} \\
-\textsc{2013}  & Teaching assistant of Physics Lab hands-on courses, UCSB   \\
+
+\textsc{\small Sept.--Dec. 2013}  & Teaching assistant of Physics Lab hands-on courses, UCSB   \\
 \multicolumn{2}{c}{} \\
 \textsc{2014--2015}  & Organizer of Treu Group Meetings, UCSB \& UCLA \\
 \multicolumn{2}{c}{} \\
 \textsc{2015--2017}  & Volunteer in the annual \textsc{Exploring Your Universe!} events, UCLA \\
 \multicolumn{2}{c}{} \\
-\textsc{2015--2017}  & Demonstrator of Astronomy experiments to local K12 schools \\
+\textsc{2015--2017}  & Demonstrator of Astronomy experiments to local K12 schools in Los Angeles \\
 \multicolumn{2}{c}{} \\
 
-%\textsc{\small Sept.--Dec. 2010}  & Teaching Assistant of Theoretical Astrophysics (senior undergraduate course taught by Prof. Z. G. Dai) \\
-%\multicolumn{2}{c}{} \\
-%\textsc{2010--2012}  & Vice-President and Director of Study Department of Graduate Student Union in School of Astronomy and Space Sciences, Nanjing University\\
-%\multicolumn{2}{c}{} \\
-%\textsc{2007--2009}  & Vice-President and Director of Study Department of Undergraduate Student Union in Department of Astronomy, Nanjing University\\
 
 \end{tabular}
 
