180401 revision for Price

--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -124,7 +124,7 @@
   clusters, including 8 targeted by CLASH and 6 Frontier Fields. We will address three scientific questions: 1) What's the role that
   galaxies play in the process of reionization? 2) Why and how is galaxy evolution environmental dependent? 3) How do metals cycle
   in and out of galaxies and what's the interplay between cycling of metals and SF activities?}   \\
-  & \textbf{Project in progress and scientific products: 
+  & \textbf{Project in progress and scientific product: 
         \hyperlink{17.wang.apj}{Wang et al. (2017)},
         \hyperlink{15.wang.apj}{Wang et al. (2015)},
         \hyperlink{15.jones.aj}{Jones et al. (2015)}} \\
@@ -224,7 +224,7 @@
     (\href{https://arxiv.org/abs/1610.08503}{arXiv:1610.08503})
     \item[5]\hypertarget{}{} Kelly, P. L., ..., \textbf{Wang, X.} et al. An individual star at redshift 1.5 extremely magnified by 
     a galaxy-cluster lens. 2018, \textit{Nature Astronomy}, in press (\href{https://arxiv.org/abs/1706.10279}{arXiv:1706.10279})
-    \item[6]\hypertarget{}{} Morishita, T., Abramson, L. E., Treu, T., \textbf{Wang, X.}  Metal Deficiency in Two Massive Dead 
+    \item[6]\hypertarget{}{} Morishita, T., Abramson, L. E., Treu, T., \textbf{Wang, X.} et al.  Metal Deficiency in Two Massive Dead 
     Galaxies at z$\sim$2, 2018, \textit{Astrophys. J. Letters}, 856L, 4 (\href{https://arxiv.org/abs/1803.01852}{arXiv:1803.01852})
 \end{list}
 
